# This is the Makefile for the EGriceLab::Util library
AUTOMAKE_OPTIONS = subdir-objects

AM_CXXFLAGS = -I$(top_srcdir)/util

# Build a static/shared library
lib_LIBRARIES = libEGUtil.a
libEGUtil_a_SOURCES = \
CommandOptions.cpp \
ProgLog.cpp \
StringUtils.cpp \
TSVRecord.cpp \
TSVScanner.cpp \
VersionSequence.cpp